<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:background="@drawable/wmbackground">

<RelativeLayout
    android:id="@+id/rec_relcontainer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!--  name -->
    <EditText
        android:id="@+id/rec_tbxname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_namelbl"
        android:ems="10"
        android:layout_marginBottom="15dp"
        android:inputType="text">
    </EditText>

    <!--  type -->
      <Spinner
        android:id="@+id/rec_spinnerType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rec_tbxname"
        android:hint="@string/recipe_typelbl"
        android:layout_marginBottom="15dp"/>
    
    <!--  making -->    
    <EditText
        android:id="@+id/rec_tbxmaketime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rec_spinnerType"
        android:layout_below="@id/rec_spinnerType"
        android:layout_marginBottom="15dp"
        android:hint="@string/recipe_makelbl"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="15dp" />

    <!--  descr -->
    
     <EditText
        android:id="@+id/rec_tbxdescr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rec_tbxmaketime"
        android:hint="@string/recipe_descrlbl"
        android:ems="10"
        android:layout_marginBottom="15dp"
        android:inputType="textMultiLine" >   
    </EditText>


    <!--  rating  -->
   <TextView
        android:id="@+id/rec_labelrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rec_tbxdescr"
        android:text="@string/recipe_pleaslbl"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/rec_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rec_labelrating"
        android:layout_below="@id/rec_labelrating"
        android:layout_marginBottom="20dp"
        android:numStars="5" />

   <!--  ingredients -->

    <TextView
        android:id="@+id/rec_labelingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_alignLeft="@id/rec_rating"
        android:layout_below="@id/rec_rating"
        android:layout_centerHorizontal="true"
        android:text="@string/recipe_ingrlbl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

     <EditText
        android:id="@+id/ing_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rec_labelingredients"
        android:layout_below="@id/rec_labelingredients"
        android:ems="7"
        android:inputType="text"/>
   
    <EditText
        android:id="@+id/ing_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ing_name"
        android:layout_below="@id/rec_labelingredients"
        android:ems="3"
        android:inputType="number"/>
     
    <Spinner
        android:id="@+id/ing_quantityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ing_quantity"
        android:layout_below="@id/rec_labelingredients"
       />

    <Button
        android:id="@+id/ing_btnadd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ing_quantityType"
        android:layout_marginTop="5dp"
        android:text="@string/BtnAdd" />
     
</RelativeLayout>
</ScrollView>